--- a/HRMS/HRMS.WebApplication/appsettings.json
+++ b/HRMS/HRMS.WebApplication/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WebAppSettings": {
+    "ApiBaseUrl": "https://localhost:7163/api/v1"
+  }
 }
